package com.company;

public interface DanceImpl {
    void spin();
    void doTheCaterpillar();
    void jump();

}


